objects/Expense_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expense Line Items</relationshipLabel>
        <relationshipName>Expense_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Expense Line Item</label>
    <nameField>
        <label>Expense Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>